[package]
name = "transient_db"
license = "MIT OR Apache-2.0"
description = "An intelligent, persistent, and concurrent key-value store for Rust, designed to manage data with a lifecycle through frequency tracking and TTL."
repository = "https://github.com/FabioCanavarro/TransientDB"
homepage = "https://github.com/FabioCanavarro/TransientDB"
readme = "README.md"
keywords = ["database", "kv-store", "sled", "cache", "ttl"]
categories = ["database-implementations", "caching", "concurrency", "data-structures"]
version = "0.1.0"
edition = "2024"

[lib]

[[bin]]
name = "transient"

[dependencies]
bincode = { version = "2.0.1", features = ["serde", "derive"] }
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
